# youtube-uploader

./: .gitignore  .prettierignore  CHANGELOG.md  README.md  eslint.config.js  index.html  lefthook.yml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: auto-merge.yml  ci.yml  dependabot-automerge.yml  release.yml
docs/: MAINTAINER.md
scripts/: check-pinned-deps.mjs  extract-changelog.mjs  sync-app-version.mjs
src/: App.tsx  main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/resources/: default-config.yaml  oauth.json.example
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/config/: app_config.rs  local_index.rs  mod.rs  oauth_credentials.rs  paths.rs  schedule.rs  settings.rs  templates.rs  video_files.rs
src-tauri/src/youtube/: api.rs  auth.rs  mod.rs  types.rs
src/components/: AuthControls.tsx  OpenOnYouTubeButton.tsx  PlaylistPicker.tsx
src/components/layout/: AppLayout.tsx
src/lib/: labels.ts  tauri.ts  updater.ts  youtube.ts
src/pages/: AuthPage.tsx  CategoriesPage.tsx  DevelopmentPage.tsx  OAuthSetupPage.tsx  PlaylistsPage.tsx  SettingsPage.tsx  UploadPage.tsx  VideosPage.tsx
src/theme/: theme.ts
