[package]
name = "youtube-uploader"
version = "0.1.0"
description = "Batch upload videos to YouTube with scheduled publishing"
authors = ["you"]
edition = "2021"

[lib]
name = "youtube_uploader_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
thiserror = "2"
anyhow = "1"
regex = "1"
url = "2"
tiny_http = "0.12"
dirs = "6"
walkdir = "2"
futures-util = "0.3"
tokio-util = { version = "0.7", features = ["io"] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
pedantic = "warn"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
